Fix invisible text on mobile, use button not anchor, ++

--- a/src/components/Buttons/Alternative/Alternative.module.css
+++ b/src/components/Buttons/Alternative/Alternative.module.css
@@ -2,46 +2,39 @@
   composes: base from "../BaseButton.module.css";
   padding: 20px;
   display: inline-block;
-  margin: 3px;
+}
+
+.alternativeBase:focus {
+  outline: 3px solid #2980b9;
 }
 
 .alternative {
   composes: alternativeBase;
   composes: darkGray from "../../../base-styles/colors.module.css";
-  composes: whiteHover from "../../../base-styles/colors.module.css";
   composes: whiteBackground from "../../../base-styles/colors.module.css";
   transition: all 300ms;
 }
 
-.alternative:hover,
-.alternative:focus {
+.alternativeBase:hover {
   background-color: #2980b9;
   color: white;
-}
-
-.alternativeMobile {
-  composes: alternative;
-}
-
-.alternativeMobile:hover,
-.alternativeMobile:focus {
-  background-color: white;
-  color: #2c3e50;
 }
 
 .correctAnswer {
   composes: alternativeBase;
   composes: greenLightBackground from "../../../base-styles/colors.module.css";
-  composes: greenLightBackgroundHover from "../../../base-styles/colors.module.css";
+  composes: greenBackgroundHover from "../../../base-styles/colors.module.css";
   composes: white from "../../../base-styles/colors.module.css";
+  composes: whiteHover from "../../../base-styles/colors.module.css";
   composes: darkGrayHover from "../../../base-styles/colors.module.css";
 }
 
 .wrongAnswer {
   composes: alternativeBase;
   composes: redLightBackground from "../../../base-styles/colors.module.css";
-  composes: redLightBackgroundHover from "../../../base-styles/colors.module.css";
+  composes: redBackgroundHover from "../../../base-styles/colors.module.css";
   composes: white from "../../../base-styles/colors.module.css";
+  composes: whiteHover from "../../../base-styles/colors.module.css";
   composes: darkGrayHover from "../../../base-styles/colors.module.css";
 }
 
